--- a/DEA.ipynb
+++ b/DEA.ipynb
@@ -74,7 +74,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train.channelGrouping.unique()"
+    "def dfbar(df, feature, top=-1):\n",
+    "    value_count1 = train[feature].value_counts(dropna=True,normalize=True)\n",
+    "    plt.figure(figsize=[15,5])\n",
+    "    value_count1[0:top].plot(kind='bar',grid=True)\n",
+    "    plt.title(f'Group by {feature},{sum(train[feature].isnull())} NaN data')\n",
+    "    plt.show()\n",
+    "    return None\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### channelGrouping "
    ]
   },
   {
@@ -83,11 +96,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "le = LabelEncoder()\n",
-    "train['channelGrouping'] = le.fit_transform(train.channelGrouping)\n",
+    "channel = train.channelGrouping.value_counts(dropna=True,normalize=True)\n",
+    "plt.figure(figsize=[15,5])\n",
+    "plt.subplot(1,2,1)\n",
+    "plt.barh(np.arange(channel.shape[0])+1,\n",
+    "         channel.values,\n",
+    "         alpha=0.3,\n",
+    "         facecolor='k',edgecolor='b',\n",
+    "         tick_label=channel.index.values)\n",
+    "plt.title(f'Group by channelGrouping,{sum(train.channelGrouping.isnull())} NaN data')\n",
     "\n",
-    "train.channelGrouping.hist(bins=15,figsize=[15,5])\n",
-    "plt.title('channelGrouping')"
+    "plt.subplot(1,2,2)\n",
+    "idx = train.totals_transactionRevenue != 0 \n",
+    "channel2 = train[idx].channelGrouping.value_counts(dropna=True,normalize=False)\n",
+    "plt.barh(np.arange(channel2.shape[0])+1,\n",
+    "         channel2.values,\n",
+    "         alpha=0.3,\n",
+    "         facecolor='k',edgecolor='b',\n",
+    "         tick_label=channel.index.values)\n",
+    "plt.title(f'Group by channelGrouping,{sum(train.channelGrouping.isnull())} NaN data')\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idx = train.totals_transactionRevenue != 0 \n"
    ]
   },
   {
@@ -180,17 +218,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train.groupby('visitNumber').size()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train.visitNumber.hist(bins=500,figsize=[15,5])\n",
-    "plt.show()"
+    "dfbar(train,'visitNumber',top=30)"
    ]
   },
   {
@@ -267,17 +295,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def dfbar(df,feature):\n",
-    "    unique = df[feature].unique\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "train.iloc[:,6:10].head()"
    ]
   },
@@ -295,6 +312,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "我们可以看到device_operatingSystem 有较多(not set)项目 ，我们前期可以先去掉这些数据，在后期可以用机器学习的方法找到其真实值"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfbar(train, 'device_browser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=[15,5])\n",
+    "value_count2 = train['device_deviceCategory'].value_counts(dropna=False,normalize=False)\n",
+    "value_count3 = train['device_operatingSystem'].value_counts(dropna=False,normalize=False)\n",
+    "plt.subplot(1,2,1)\n",
+    "value_count2.plot(kind='bar')\n",
+    "plt.subplot(1,2,2)\n",
+    "value_count3.plot(kind='bar')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### geoNetwork"
    ]
   },
@@ -305,6 +354,31 @@
    "outputs": [],
    "source": [
     "train.iloc[:,9:16].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 1\n",
+    "for i in train.columns[9:16]:\n",
+    "    plt.subplot(7,1,n)\n",
+    "    value_count1 = train[i].value_counts(dropna=True,normalize=True)\n",
+    "    value_count1[0:10].plot(kind='barh',grid=True,figsize=[8,30])\n",
+    "    plt.title(f'Group by {i},{sum(train[i].isnull())} NaN data')\n",
+    "    n = n + 1\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train.fullVisitorId.nunique()"
    ]
   },
   {
@@ -329,7 +403,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train.groupby('totals_transactionRevenue').size()"
+    "train['totals_bounces'] = train.totals_bounces.fillna(0)\n",
+    "train['totals_newVisits'] = train.totals_newVisits.fillna(0)\n",
+    "train['totals_transactionRevenue'] = train.totals_transactionRevenue.fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=[15,5])\n",
+    "plt.subplot(1,2,1)\n",
+    "bounces = train.totals_bounces.value_counts(normalize=True)\n",
+    "plt.bar(np.arange(bounces.shape[0]),\n",
+    "        bounces.values,\n",
+    "        width=0.2,\n",
+    "        alpha=0.3,\n",
+    "        facecolor='K',\n",
+    "        edgecolor='b',\n",
+    "        lw=1)\n",
+    "plt.title('Bounces count')\n",
+    "plt.ylabel('Percentage')\n",
+    "\n",
+    "plt.subplot(1,2,2)\n",
+    "idx = train.totals_transactionRevenue != 0 \n",
+    "bounces = train.totals_bounces[idx].value_counts(normalize=True)\n",
+    "plt.bar(np.arange(bounces.shape[0]),\n",
+    "        bounces.values,\n",
+    "        width=0.2,\n",
+    "        alpha=0.3,\n",
+    "        facecolor='K',\n",
+    "        edgecolor='b',\n",
+    "        lw=1)\n",
+    "plt.title('Bounces count have Revenue')\n",
+    "plt.ylabel('Percentage')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bounces = train.totals_bounces.value_counts(normalize=True)\n",
+    "bounces.index.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in train.columns[16:21]:\n",
+    "    dfbar(train,i,top=30)"
    ]
   },
   {
@@ -365,6 +495,15 @@
    "outputs": [],
    "source": [
     "train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sum(train['trafficSource_adwordsClickInfo.isVideoAd'].isnull())"
    ]
   },
   {
