--- a/cleanregression.ipynb
+++ b/cleanregression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,40 +12,15 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from pandas.io.json import json_normalize\n",
-    "from sklearn.preprocessing import LabelEncoder"
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def load_df(csv_path, nrows=None):\n",
-    "    JSON_COLUMNS = ['device', 'geoNetwork', 'totals', 'trafficSource']\n",
-    "    df = pd.read_csv(csv_path, \n",
-    "                     converters={column: json.loads for column in JSON_COLUMNS}, \n",
-    "                     dtype={'fullVisitorId': 'str'}, # Important!!\n",
-    "                     nrows=nrows)\n",
-    "    for column in JSON_COLUMNS:\n",
-    "        column_as_df = json_normalize(df[column])\n",
-    "        column_as_df.columns = [f\"{column}_{subcolumn}\" for subcolumn in column_as_df.columns]\n",
-    "        df = df.drop(column, axis=1).merge(column_as_df, right_index=True, left_index=True)\n",
-    "    print(f\"Loaded {os.path.basename(csv_path)}. Shape: {df.shape}\")\n",
-    "    return df\n",
-    "\n",
-    "\n",
-    "def isgooglemc(day,num):\n",
-    "    if day in num.index.values:\n",
-    "        val = num[day]\n",
-    "    else:\n",
-    "        val = 0\n",
-    "    return val"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,44 +34,32 @@
     "    for i in df.columns:\n",
     "        if sum(df[i] == df[i][0]) == df.shape[0]:\n",
     "            df.drop([i], axis=1, inplace=True)\n",
-    "    #geoNetwork\n",
-    "    df['isnotavailable'] = df.geoNetwork_city == 'not available in demo dataset'\n",
-    "    df['unknown'] = df.geoNetwork_networkDomain == 'unknown.unknown'\n",
-    "    df['notset'] = df.geoNetwork_networkDomain == '(not set)'\n",
-    "    df['notsetcity'] = df.geoNetwork_city == '(not set)'\n",
-    "    df['notsetmetro'] = df.geoNetwork_metro == '(not set)'\n",
-    "    df['isUS'] = df.geoNetwork_country == 'United States'\n",
+    "    #geoNetwork=\n",
     "    #totals\n",
     "    df.dropna(axis=0, inplace=True, subset=['totals_pageviews'])\n",
     "    df['totals_bounces'] = df.totals_bounces.fillna(0).astype('float')\n",
     "    df['totals_newVisits'] = df.totals_newVisits.fillna(0).astype('float')\n",
     "    df['totals_hits'] = df.totals_hits.astype('float')\n",
     "    df['totals_pageviews'] = df.totals_pageviews.astype('float')\n",
+    "    df['diff'] = df.totals_hits - df.totals_pageviews\n",
     "    #trafficSource\n",
     "    df['havegclid'] = df['trafficSource_adwordsClickInfo.gclId'].notnull()\n",
     "    df['istruedirect'] = (df.trafficSource_isTrueDirect.notnull()) & (df.channelGrouping != 'Direct') \n",
     "    df['path'] = df.trafficSource_source +  df.trafficSource_referralPath.fillna('') \n",
-    "    df['isgoogleplex'] = df.path == 'mall.googleplex.com/'\n",
-    "\n",
-    "    adcontentidx = df.trafficSource_adContent == 'Google Merchandise Collection'\n",
-    "    num = df[adcontentidx].day.value_counts()\n",
-    "    df['keyadcontent'] = df.day.apply(isgooglemc, args=[num])\n",
     "    if isdf == True:\n",
-    "        df['holiidx'] = (df.date > '2016-11-24') & (df.date < '2016-12-25')\n",
     "        df.drop(['trafficSource_campaignCode'],axis=1,inplace=True)\n",
     "    else:\n",
-    "        df['holiidx'] = (df.date > '2017-11-23') & (df.date < '2017-12-25')   \n",
+    "        pass\n",
     "    #drop\n",
     "    droplist = [\n",
     "        'sessionId',\n",
     "        'date',\n",
     "        'device_isMobile',\n",
     "        'visitStartTime',\n",
-    "        'geoNetwork_city',\n",
+    "        'geoNetwork_continent',\n",
     "        'geoNetwork_region',\n",
     "        'geoNetwork_metro',\n",
     "        'geoNetwork_country',\n",
-    "        'geoNetwork_networkDomain',\n",
     "        'trafficSource_adContent',\n",
     "        'trafficSource_adwordsClickInfo.gclId',\n",
     "        'trafficSource_medium',\n",
@@ -109,8 +72,8 @@
     "        'trafficSource_source',\n",
     "        'trafficSource_referralPath',\n",
     "        'trafficSource_isTrueDirect',\n",
-    "        'path',\n",
     "        'visitId',\n",
+    "        'fullVisitorId'\n",
     "    ]\n",
     "    df.drop(droplist, axis=1, inplace=True)\n",
     "    return df\n",
@@ -119,18 +82,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/leechh/anaconda3/envs/DM/lib/python3.6/site-packages/pandas/io/feather_format.py:112: FutureWarning: `nthreads` argument is deprecated, pass `use_threads` instead\n",
-      "  return feather.read_dataframe(path, nthreads=nthreads)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "trainpath = '/home/leechh/桌面/tempfile/R/train.feather'\n",
     "\n",
@@ -139,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,47 +108,93 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "idx = train.totals_transactionRevenue.notnull()\n",
+    "train = train[idx].reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "train.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "#device\n",
+    "convertlist = ['device_browser', 'device_operatingSystem','geoNetwork_subContinent']\n",
+    "for i in convertlist:\n",
+    "    idx1 = train[i].value_counts().index[:10].values\n",
+    "    idx2 = test[i].value_counts().index[:10].values\n",
+    "    whitelist = set(list(idx1)+list(idx2))\n",
+    "    traintotal = set(list(train[i].unique())+['Notin'])\n",
+    "    testtotal = set(list(test[i].unique())+['Notin'])\n",
+    "    trainlist  = traintotal.difference(whitelist)\n",
+    "    testlist = testtotal.difference(whitelist)\n",
+    "    train[i].replace(list(trainlist),'other',inplace=True)\n",
+    "    test[i].replace(list(testlist),'other',inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#device\n",
-    "devicelist = ['device_browser', 'device_operatingSystem']\n",
-    "for i in devicelist:\n",
-    "    deviceidx = train[i].value_counts().index[10:].values\n",
-    "    train[i] = train[i].replace(deviceidx,'other')\n",
-    "    test[i] = test[i].replace(deviceidx,'other')"
+    "convertlist = ['geoNetwork_city','geoNetwork_networkDomain','path']\n",
+    "for i in convertlist:\n",
+    "    idx1 = train[i].value_counts().index[:20].values\n",
+    "    idx2 = test[i].value_counts().index[:20].values\n",
+    "    whitelist = set(list(idx1)+list(idx2))\n",
+    "    traintotal = set(list(train[i].unique())+['Notin'])\n",
+    "    testtotal = set(list(test[i].unique())+['Notin'])\n",
+    "    trainlist  = traintotal.difference(whitelist)\n",
+    "    testlist = testtotal.difference(whitelist)\n",
+    "    train[i].replace(list(trainlist),'other',inplace=True)\n",
+    "    test[i].replace(list(testlist),'other',inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "target = train.totals_transactionRevenue\n",
-    "train.drop(['totals_transactionRevenue'], axis=1, inplace=True)"
+    "train.drop(['totals_transactionRevenue','index'], axis=1, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "testid = test.fullVisitorId\n",
-    "test.drop(['fullVisitorId'], axis=1, inplace=True)\n",
-    "train.drop(['fullVisitorId'], axis=1, inplace=True)"
+    "realtarget = target.astype('float')/(10**6)\n",
+    "logtarget = np.log1p(target.astype('float')+1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,8 +202,10 @@
     "          'device_browser',\n",
     "          'device_deviceCategory',\n",
     "          'device_operatingSystem',\n",
-    "          'geoNetwork_continent',\n",
-    "          'geoNetwork_subContinent'\n",
+    "          'geoNetwork_city',\n",
+    "          'geoNetwork_networkDomain',\n",
+    "          'geoNetwork_subContinent',\n",
+    "          'path'\n",
     "         ]\n",
     "\n",
     "for col in lelist:\n",
@@ -215,66 +217,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainarray = train[lelist].values\n",
+    "testarray = test[lelist].values\n",
+    "trainlist = []\n",
+    "testlist = []\n",
+    "for i in np.arange(trainarray.shape[1]):\n",
+    "    ohe = OneHotEncoder()\n",
+    "    ohe.fit(np.append(trainarray[:,i], testarray[:,i])[:,np.newaxis])\n",
+    "    trainlist.append(ohe.transform(trainarray[:,i][:,np.newaxis]).toarray())\n",
+    "    testlist.append(ohe.transform(testarray[:,i][:,np.newaxis]).toarray())\n",
+    "    \n",
+    "x_train = np.hstack(trainlist)\n",
+    "x_test = np.hstack(testlist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "train = train.astype(dtype='float')\n",
-    "test = test.astype(dtype='float')"
+    "columns = list(set(train.columns).difference(lelist))\n",
+    "\n",
+    "x_train = np.hstack((train[columns].values,x_train))\n",
+    "x_test = np.hstack((test[columns].values,x_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(903553, 24)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "11515"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sum(target.notnull())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save('/home/leechh/tempfile/R/class2/x_train.npy',train.values)\n",
-    "np.save('/home/leechh/tempfile/R/class2/y_train.npy',target.notnull().astype('float').values)\n",
-    "np.save('/home/leechh/tempfile/R/class2/x_test.npy',test.values)\n",
-    "np.save('/home/leechh/tempfile/R/class2/Id.npy',testid.values)"
+    "np.save('/home/leechh/tempfile/R/x_train1030.npy',x_train.astype('float'))\n",
+    "np.save('/home/leechh/tempfile/R/x_test1030.npy',x_test.astype('float'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save('/home/leechh/tempfile/R/target.npy',target.astype('float'))\n",
+    "np.save('/home/leechh/tempfile/R/logtarget.npy',logtarget.astype('float'))\n",
+    "np.save('/home/leechh/tempfile/R/realtarget.npy',realtarget.astype('float'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gc.collect()"
    ]
   }
  ],
